update Kotchasan add History

--- a/modules/repair/views/detail.html
+++ b/modules/repair/views/detail.html
@@ -29,5 +29,7 @@
   <fieldset>
     <legend>
       <span>{LNG_Transaction history}</span>
-    </legend> %DETAILS% </fieldset>
+    </legend>
+    %DETAILS%
+  </fieldset>
 </form>
