update Kotchasan add HOST change fb to social add Google signin

--- a/skin/gcss.css
+++ b/skin/gcss.css
@@ -612,7 +612,6 @@ input[type="file"] {
   border-style: none;
   background-image: url() !important;
 }
-.input-gcalendar,
 select,
 input[type="text"],
 input[type="password"],
@@ -623,7 +622,7 @@ input[type="email"],
 input[type="url"],
 input[type="color"] {
   line-height: 2.3em;
-  height: 2.3em;
+  height: 2.287em;
 }
 .grange_div {
   margin: 9px 0;
@@ -1006,7 +1005,7 @@ textarea.cke_editable {
   white-space: nowrap;
   overflow: hidden;
   line-height: 2.3em;
-  height: 2.3em;
+  height: 2.287em;
   padding: 0 0.7em;
   outline: none;
   cursor: pointer;
@@ -1191,6 +1190,9 @@ html .button:before,
 .button.facebook,
 .facebook .blue {
   background-color: #5b74a8;
+}
+.button.google {
+  background-color: #df4930;
 }
 .color-pink {
   color: #e91e63;
@@ -1647,7 +1649,6 @@ form p {
   margin: 2px 0;
 }
 form .item {
-  margin: 0 10px;
   padding-bottom: 10px;
   overflow-x: auto;
 }
@@ -1822,10 +1823,13 @@ ul.inputgroups input[type="text"]:focus {
   min-width: 15em;
   margin-top: 2px;
   right: 0;
+  text-align: left;
+  overflow: visible;
 }
 html[dir="rtl"] .gdpanel {
   left: 0;
   right: auto;
+  text-align: right;
 }
 .gdpanel.show {
   visibility: visible;
@@ -2647,6 +2651,8 @@ div.ginput a:hover {
   min-width: 7em;
   padding-left: 0.1em;
   padding-right: 0.1em;
+  height: 2.287em;
+  line-height: 2.3em;
 }
 div.gcalendar {
   display: table;
@@ -2830,7 +2836,7 @@ div.gcalendar td.month {
   box-shadow: 0 0 1px #fff inset;
 }
 .event-calendar td {
-  padding: 0;
+  padding: 0 !important;
 }
 .event-calendar td div {
   position: relative;
@@ -3808,8 +3814,7 @@ fieldset.search {
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
   overflow: hidden;
-  height: 2.3em;
-  line-height: 2.3em;
+  height: 2.287em;
 }
 fieldset.search input[type="text"] {
   -moz-border-radius: 0.5em 0 0 0.5em;
