--- a/skin/default/style.css
+++ b/skin/default/style.css
@@ -397,7 +397,7 @@ fieldset.item {
 .setup_frm > fieldset > legend > span,
 main h3 {
   display: block;
-  padding: 10px 10px;
+  padding: 10px;
   font-size: 1.625em;
 }
 main h3 select {
