--- a/skin/default/style.css
+++ b/skin/default/style.css
@@ -676,6 +676,9 @@ header .inline {
   width: 2em;
   text-align: center;
 }
+.repair_detail .item {
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
+}
 
 /* tablet, small device */
 
