--- a/modules/repair/views/detail.html
+++ b/modules/repair/views/detail.html
@@ -1,4 +1,4 @@
-<form class="setup_frm">
+<form class="setup_frm repair_detail">
   <fieldset>
     <legend>
       <span>{LNG_Details of} {LNG_Informer}</span>
