--- a/modules/repair/views/detail.html
+++ b/modules/repair/views/detail.html
@@ -3,28 +3,24 @@
     <legend>
       <span>{LNG_Details of} {LNG_Informer}</span>
     </legend>
-    <p class="item icon-customer">
-      <b>{LNG_Name}</b> %NAME%</p>
-    <p class="item icon-phone">
-      <b>{LNG_Phone}</b>
-      <a href="tel:%PHONE%">%PHONE%</a>
+    <p class="icon-customer">
+      <b>{LNG_Name}: </b>%NAME%</p>
+    <p class="icon-phone">
+      <b>{LNG_Phone}: </b><a href="tel:%PHONE%">%PHONE%</a>
     </p>
   </fieldset>
   <fieldset>
     <legend>
       <span>{LNG_Repair job description}</span>
     </legend>
-    <p class="item icon-file">
-      <b>{LNG_Equipment}</b> %EQUIPMENT%</p>
-    <p class="item icon-number">
-      <b>{LNG_Serial/Registration number}</b> %SERIAL%</p>
-    <p class="item icon-calendar">
-      <b>{LNG_Received date}</b> %CREATE_DATE%</p>
-    <p class="item icon-comments">
-      <b>{LNG_Repair note}</b> %COMMENT%</p>
-    <p class="item icon-tools">
-      <b>{LNG_problems and repairs details}</b>
-      <br>%JOB_DESCRIPTION%</p>
+    <p class="icon-file">
+      <b>{LNG_Equipment}: </b>%EQUIPMENT%</p>
+    <p class="icon-number">
+      <b>{LNG_Serial/Registration number}: </b>%SERIAL%</p>
+    <p class="icon-calendar">
+      <b>{LNG_Received date}: </b>%CREATE_DATE%</p>
+    <p class="icon-tools">
+      <b>{LNG_problems and repairs details}: </b>%JOB_DESCRIPTION%</p>
   </fieldset>
   <fieldset>
     <legend>
