--- a/modules/repair/views/detail.html
+++ b/modules/repair/views/detail.html
@@ -19,6 +19,8 @@
       <b>{LNG_Serial/Registration number}: </b>%SERIAL%</p>
     <p class="icon-calendar">
       <b>{LNG_Received date}: </b>%CREATE_DATE%</p>
+    <p class="item icon-comments">
+      <b>{LNG_Repair note}</b> %COMMENT%</p>
     <p class="icon-tools">
       <b>{LNG_problems and repairs details}: </b>%JOB_DESCRIPTION%</p>
   </fieldset>
