--- a/modules/repair/views/detail.html
+++ b/modules/repair/views/detail.html
@@ -1,28 +1,41 @@
-<form class="setup_frm repair_detail">
-  <fieldset>
-    <legend>
-      <span>{LNG_Details of} {LNG_Informer}</span>
-    </legend>
-    <p class="icon-customer">
-      <b>{LNG_Name}: </b>%NAME%</p>
-    <p class="icon-phone">
-      <b>{LNG_Phone}: </b><a href="tel:%PHONE%">%PHONE%</a>
-    </p>
-  </fieldset>
-  <fieldset>
-    <legend>
-      <span>{LNG_Repair job description}</span>
-    </legend>
-    <p class="icon-file">
-      <b>{LNG_Equipment}: </b>%EQUIPMENT%</p>
-    <p class="icon-number">
-      <b>{LNG_Serial/Registration number}: </b>%SERIAL%</p>
-    <p class="icon-calendar">
-      <b>{LNG_Received date}: </b>%CREATE_DATE%</p>
-    <p class="item icon-comments">
-      <b>{LNG_Repair note}</b> %COMMENT%</p>
-    <p class="icon-tools">
-      <b>{LNG_problems and repairs details}: </b>%JOB_DESCRIPTION%</p>
+<form class="setup_frm">
+  <fieldset class="item">
+    <table class="repair_detail">
+      <tr>
+        <td scope="rowgroups" colspan="2">
+          <h2>{LNG_Details of} {LNG_Informer}</h2>
+        </td>
+      </tr>
+      <tr>
+        <td><b class="icon-customer">{LNG_Name}</b></td>
+        <td>%NAME%</td>
+      </tr>
+      <tr>
+        <td><b class="icon-phone">{LNG_Phone}</b></td>
+        <td><a href="tel:%PHONE%">%PHONE%</a></td>
+      </tr>
+      <tr>
+        <td scope="rowgroups" colspan="2">
+          <h2>{LNG_Repair job description}</h2>
+        </td>
+      </tr>
+      <tr>
+        <td><b class="icon-file">{LNG_Equipment}</b></td>
+        <td>%EQUIPMENT%</td>
+      </tr>
+      <tr>
+        <td><b class="icon-number">{LNG_Serial/Registration number}</b></td>
+        <td>%SERIAL%</td>
+      </tr>
+      <tr>
+        <td><b class="icon-calendar">{LNG_Received date}</b></td>
+        <td>%CREATE_DATE%</td>
+      </tr>
+      <tr>
+        <td><b class="icon-tools">{LNG_problems and repairs details}</b></td>
+        <td>%JOB_DESCRIPTION%</td>
+      </tr>
+    </table>
   </fieldset>
   <fieldset>
     <legend>
